--- a/index.html
+++ b/index.html
@@ -233,12 +233,12 @@
             </h2>
             
             <!-- Video Placeholder -->
-            <div class="video-placeholder">
-                <div class="video-placeholder-text">
-                    <i class="fas fa-play text-5xl mb-4 block"></i>
-                    <p>Video: Cortinas abriéndose automáticamente</p>
-                </div>
-            </div>
+       <div class="video-container shadow-2xl rounded-xl overflow-hidden mb-8">
+    <video autoplay muted loop playsinline class="w-full">
+        <source src="img/video-cortinas.mp4" type="video/mp4">
+        Tu navegador no soporta el video.
+    </video>
+</div>
             
             <!-- CTA Buttons -->
             <div class="cta-button-container">
