--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
        <div class="video-container shadow-2xl rounded-xl overflow-hidden mb-8">
     <video autoplay muted loop playsinline class="w-full">
         <source src="abre_cortinas.mp4" type="video/mp4">
-        Tu navegador no soporta el video.
+     //   Tu navegador no soporta el video.
     </video>
 </div>
             
