--- a/index.html
+++ b/index.html
@@ -413,14 +413,9 @@
         <div class="max-w-4xl mx-auto">
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <!-- Imagen del Producto -->
-                <div class="bg-gradient-to-br from-purple-400 to-blue-400 rounded-lg p-8 text-center min-h-80 flex items-center justify-center">
-                    <div class="text-white">
-                        <i class="fas fa-cube text-6xl mb-4 block"></i>
-                        <p class="text-lg">
-                            <strong>Imagen del Producto:</strong> Aura Home en su caja
-                        </p>
-                    </div>
-                </div>
+               <div class="rounded-lg overflow-hidden shadow-xl min-h-80 flex items-center justify-center">
+                      <img src="panchi.jpg" alt="Aura Home en su caja" class="w-full h-full object-cover">
+              </div>
                 
                 <!-- Contenido -->
                 <div class="text-white">
