--- a/index.html
+++ b/index.html
@@ -287,10 +287,9 @@
                 
                 <div class="bg-gradient-to-br from-purple-100 to-blue-100 rounded-lg p-8 text-center min-h-80 flex items-center justify-center">
                     <div>
-                        <i class="fas fa-magic text-6xl text-purple-600 mb-4 block"></i>
-                        <p class="text-gray-700 text-lg">
-                            <strong>Imagen/GIF:</strong> Cortinas abriéndose y cerrándose automáticamente
-                        </p>
+                      <div>
+                           <img src="cortinaa.jpg" alt="Cortinas Aura Home abriéndose automáticamente" class="rounded-xl shadow-lg w-full h-auto">
+                      </div>
                     </div>
                 </div>
             </div>
