--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ src="https://www.facebook.com/tr?id=1245575887474847&ev=PageView&noscript=1"
             <!-- CTA Buttons -->
             <div class="cta-button-container">
                 <a href="https://www.mercadolibre.com.ar" target="_blank" class="btn-primary text-white px-8 py-4 rounded-lg font-bold text-lg inline-block">
-                    <i class="fas fa-shopping-cart mr-2"></i> COMPRAR SEGURO EN MERCADO LIBRE
+                    <i class="fas fa-shopping-cart mr-2"></i> COMPRAR 
                 </a>
             </div>
             
